logs/pywse.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pywse'...
Listing './lib/python3.5/site-packages/pywse/client'...
Listing './lib/python3.5/site-packages/pywse/conf'...
Listing './lib/python3.5/site-packages/pywse/model'...
Compiling './lib/python3.5/site-packages/pywse/model/lv1.py'...
***   File "./lib/python3.5/site-packages/pywse/model/lv1.py", line 50
    print country.answer, '\n'
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pywse/script'...
Compiling './lib/python3.5/site-packages/pywse/script/collection_countries.py'...
***   File "./lib/python3.5/site-packages/pywse/script/collection_countries.py", line 45
    print countries_html
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pywse/script/countries.py'...
***   File "./lib/python3.5/site-packages/pywse/script/countries.py", line 101
    print arg, data.decode('utf=8'), self.kwargs[arg]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pywse/script/get_country_chinese_name.py'...
***   File "./lib/python3.5/site-packages/pywse/script/get_country_chinese_name.py", line 31
    print question
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pywse-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
